[package]
name = "urban_control"
version = "0.1.0"
authors = ["darkfm@vera.com.uy"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agb = "0.9.2"
enum-ordinalize = "3.1.11"
bitfield = "0.14.0"

[profile.release]
panic = "abort"
lto = true